tests/failing/test26.tail
let v1:[int]2 = reshape{[int],[1,2]}([3,2],iotaV(5)) in
let v2:[int]2 = transp{[int],[2]}(v1) in
let v7:[int]3 = transp2{[int],[3]}([2,1,3],reshape{[int],[2,3]}([3,3,2],v1)) in
let v12:[int]1 = snoc{[int],[0]}(each{[int,int],[1]}(fn v11:[int]0 => addi(2,v11),iota(1)),2) in
i2d(reduce{[int],[0]}(addi,0,reduce{[int],[1]}(addi,0,reduce{[int],[2]}(addi,0,v7))))
